--- a/css/style.less
+++ b/css/style.less
@@ -1,5 +1,37 @@
 @import "variables";
 .header{
+  background-image: url("../img/img-header.jpg");
+  height: 200px;
+  background-size: cover;
+}
+.container{
+  margin: 0 5%;
+  .navigation{
+    height: 50px;
+    background-color:@navbar-color ;
+    .nav-button{
+      color: @content-color;
+      margin: 2px 5px;
+      padding: 2px 15px;
+      height: 45px;
+      background-color: black;
+      border: 0;
+      &:hover{
+        transition: 0.3s;
+        cursor: pointer;
+        background-color: darkgreen;
+      }
+    }
+  }
+  .sidebar{
+    width: 400px;
+    .side-card{
+      img{
+        height: 400px;
+      }
+    }
+  }
+  .main-content{
+  }
 
 }
-
