--- a/css/variables.less
+++ b/css/variables.less
@@ -1,1 +1,8 @@
-@content-color: yellow;
+@content-color: yellowgreen;
+@primary-color: blue;
+@secondary-color: orange;
+@navbar-color: black;
+@centring: center;
+@border-color:@content-color;
+@border-width: 1px solid;
+@border: @border-width @border-color;
